Fix layout issue
HTML being generated was broken due to the division
of products due to availability.

--- a/css/main.scss
+++ b/css/main.scss
@@ -48,9 +48,3 @@ h1 {
 h2 {
   margin-bottom: 10rem !important;
 }
-
-@media (min-width: 550px) {
-  .column, .colums {
-    margin-left: 0%;
-  }
-}
